--- a/system/views/argument/bar/header.html
+++ b/system/views/argument/bar/header.html
@@ -23,27 +23,27 @@
                 <ul class="nav navbar-nav navbar-right">
                     <li>
                         <a href="./signup">
-                            <i class="material-icons">person_add</i> Sign up
+                            <i class="material-icons">person_add</i> 註冊
                         </a>
                         <!--https://material.io/icons/-->
                     </li>
                     <li>
                         <a href="./login">
-                            <i class="material-icons">chat</i> Enter activity
+                            <i class="material-icons">chat</i> 進入活動
                         </a>
                     </li>
                     <li>
-                        <a rel="tooltip" title="About ours" data-placement="bottom" href="http://ytwu.lst.ncu.edu.tw/wu/ch/" target="_blank" class="btn btn-white btn-simple btn-just-icon">
+                        <a rel="tooltip" title="關於我們" data-placement="bottom" href="http://ytwu.lst.ncu.edu.tw/wu/ch/" target="_blank" class="btn btn-white btn-simple btn-just-icon">
                             <i class="fa fa-info-circle"></i><!--http://fontawesome.io/icons/-->
                         </a>
                     </li>
                     <li>
-                        <a rel="tooltip" title="log-out" data-placement="bottom" href="./user/logout" class="btn btn-white btn-simple btn-just-icon">
+                        <a rel="tooltip" title="登出" data-placement="bottom" href="./user/logout" class="btn btn-white btn-simple btn-just-icon">
                             <i class="fa fa-sign-out"></i>
                         </a>
                     </li>
                     <li>
-                        <a rel="tooltip" title="Setting" data-placement="bottom" href="./sitting_login" class="btn btn-white btn-simple btn-just-icon">
+                        <a rel="tooltip" title="個人主頁" data-placement="bottom" href="./sitting_login" class="btn btn-white btn-simple btn-just-icon">
                             <i class="fa fa-cog"></i>
                         </a>
                     </li>
