--- a/system/views/argument/fronttest.html
+++ b/system/views/argument/fronttest.html
@@ -20,60 +20,9 @@
 </head>
 
 <body class="index-page">
-    <!-- Navbar -->
-    <nav class="navbar navbar-transparent navbar-fixed-top navbar-color-on-scroll">
-        <div class="container">
-            <div class="navbar-header">
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navigation-index">
-                    <span class="sr-only">Toggle navigation</span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-                <a href="./login">
-                    <div class="logo-container">
-                        <div class="logo">
-                            <img src="assets/img/logo.png" alt="site Logo" rel="tooltip" title="logo" data-placement="bottom" data-html="true">
-                        </div>
-                        <div class="brand">
-                            Argument Sys
-                        </div>
-                    </div>
-                </a>
-            </div>
-            <div class="collapse navbar-collapse" id="navigation-index">
-                <ul class="nav navbar-nav navbar-right">
-                    <li>
-                        <a href="./signup">
-						    <i class="material-icons">person_add</i> Sign up
-					    </a>
-                        <!--https://material.io/icons/-->
-                    </li>
-                    <li>
-                        <a href="./login">
-						    <i class="material-icons">chat</i> Enter activity
-					    </a>
-                    </li>
-                    <li>
-                        <a rel="tooltip" title="About ours" data-placement="bottom" href="http://ytwu.lst.ncu.edu.tw/wu/ch/" target="_blank" class="btn btn-white btn-simple btn-just-icon">
-						    <i class="fa fa-info-circle"></i><!--http://fontawesome.io/icons/-->
-					    </a>
-                    </li>
-                    <li>
-                        <a rel="tooltip" title="log-out" data-placement="bottom" href="./user/logout" class="btn btn-white btn-simple btn-just-icon">
-						    <i class="fa fa-sign-out"></i>
-					    </a>
-                    </li>
-                    <li>
-                        <a rel="tooltip" title="Setting" data-placement="bottom" href="./sitting_login" class="btn btn-white btn-simple btn-just-icon">
-						    <i class="fa fa-cog"></i>
-					    </a>
-                    </li>
-                </ul>
-            </div>
-        </div>
-    </nav>
-    <!-- End Navbar -->
+    <header>
+     <%- include ../argument/bar/header.html %>   
+    </header>
     <div class="wrapper">
         <div class="header header-filter" style="background-image: url('assets/img/bg2.jpeg'); min-height:190px;height:0px;"> </div>
         <div class="main main-raised">
@@ -87,36 +36,8 @@
                 <!--/ Main contant -->
             </div>
         </div>
-        <footer class="footer">
-            <div class="container">
-                <nav class="pull-left">
-                    <ul>
-                        <li>
-                            <a href="#">
-							Home
-						</a>
-                        </li>
-                        <li>
-                            <a href="#">
-						   About Us
-						</a>
-                        </li>
-                        <li>
-                            <a href="#">
-						   Blog
-						</a>
-                        </li>
-                        <li>
-                            <a href="#">
-							Licenses
-						</a>
-                        </li>
-                    </ul>
-                </nav>
-                <div class="copyright pull-right">
-                    &copy; 2018, made with <i class="fa fa-terminal"></i> Nodejs by Theta for argument system in WuRET.
-                </div>
-            </div>
+        <footer>
+            <%- include ../argument/bar/footer.html %> 
         </footer>
     </div>
 </body>
@@ -206,20 +127,20 @@ $.get("./assessment", {
         activity_list = JSON.parse(data);
         console.log(activity_list);
         if(activity_list['return'].length<1){
-        	location.href ='/alert?error_id=200&error_con="wait for your teacher."';
+        	location.href ='./alert?error_id=200&error_con="你的老師尚未幫你安排論證室，請稍候。"';
         }
         for (var g in activity_list['return']) {
             content = activity_list['return'][g]['content'];
             $('#qusetions').append('<div id="q' + g + '" class="col-sm-12"></div>');
-            $('#q' + g).append('<div class="title"><h3>question ' + content + ' </h3></div>');
+            $('#q' + g).append('<div class="title"><h3>Q. ' + content + ' </h3></div>');
             
 
 
 
 
-            var select_list = ["Strongly disagree", "Disagree", "Neither agree nor disagree", "Agree", "Strongly agree"];
+            var select_list = ["完全同意", "同意", "不同意也不反對", "不同意", "完全不同意"];
             for (var i = 1; i < 6; i++) {
-                $('#q' + g).append('<div class=""><label><input type="radio" name="optionsRadios_' + g + '" value="' + i + '">' + select_list[i-1] + '</label></div>');
+                $('#q' + g).append('<div class=""><label><input type="radio" name="optionsRadios_' + g + '" value="' + (6-i) + '">' + select_list[i-1] + '</label></div>');
             }
 
         }
