--- a/system/views/argument/login.html
+++ b/system/views/argument/login.html
@@ -6,7 +6,7 @@
     <link rel="apple-touch-icon" sizes="76x76" href="assets/img/apple-icon.png">
     <link rel="icon" type="image/png" href="assets/img/favicon.png">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
-    <title>Material Kit by Creative Tim</title>
+    <title>學生論證系統</title>
     <meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0' name='viewport' />
     <!--     Fonts and icons     -->
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
@@ -20,7 +20,9 @@
 </head>
 
 <body class="index-page">
-	<header></header>
+	<header>
+     <%- include ../argument/bar/header.html %>   
+    </header>
     <div class="wrapper">
         <div class="header header-filter" style="background-image: url('assets/img/bg2.jpeg');">
             <div class="container">
@@ -39,7 +41,7 @@
                 <div class="container">
                     <form action="./argument2" method="post">
                         <div class="title">
-                            <h2>Login</h2>
+                            <h2>進入論證活動</h2>
                         </div>
                         <!--Input 1 : User id-->
                         <div class="col-sm-6">
@@ -77,7 +79,7 @@
             </div>
         </div>
         <footer>
-         
+        <%- include ../argument/bar/footer.html %> 
         </footer>
     </div>
 </body>
@@ -104,21 +106,6 @@ $().ready(function() {
     }
 
 });
-</script>
-<!--
-/**
- * [footer & header]
- * @type {Html String}
- */
--->
-<script type="text/javascript">
-$.get("./footer", {}, function(data, status) { 
-	$("footer").append(data);
-});
 
-$.get("./header", {}, function(data, status) { 
-	$("header").append(data);
-});
-</script>
 
 </html>
