--- a/system/views/argument/newTester.html
+++ b/system/views/argument/newTester.html
@@ -6,7 +6,7 @@
     <link rel="apple-touch-icon" sizes="76x76" href="assets/img/apple-icon.png">
     <link rel="icon" type="image/png" href="assets/img/favicon.png">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
-    <title>Material Kit by Creative Tim</title>
+    <title>學生論證系統</title>
     <meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0' name='viewport' />
     <!--     Fonts and icons     -->
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
@@ -48,60 +48,9 @@
 </head>
 
 <body class="index-page">
-    <!-- Navbar -->
-    <nav class="navbar navbar-transparent navbar-fixed-top navbar-color-on-scroll">
-        <div class="container">
-            <div class="navbar-header">
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navigation-index">
-                    <span class="sr-only">Toggle navigation</span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-                <a href="./login">
-                    <div class="logo-container">
-                        <div class="logo">
-                            <img src="assets/img/logo.png" alt="site Logo" rel="tooltip" title="logo" data-placement="bottom" data-html="true">
-                        </div>
-                        <div class="brand">
-                            Argument Sys
-                        </div>
-                    </div>
-                </a>
-            </div>
-            <div class="collapse navbar-collapse" id="navigation-index">
-                <ul class="nav navbar-nav navbar-right">
-                    <li>
-                        <a href="./signup">
-						    <i class="material-icons">person_add</i> Sign up
-					    </a>
-                        <!--https://material.io/icons/-->
-                    </li>
-                    <li>
-                        <a href="./login">
-						    <i class="material-icons">chat</i> Enter activity
-					    </a>
-                    </li>
-                    <li>
-                        <a rel="tooltip" title="About ours" data-placement="bottom" href="http://ytwu.lst.ncu.edu.tw/wu/ch/" target="_blank" class="btn btn-white btn-simple btn-just-icon">
-						    <i class="fa fa-info-circle"></i><!--http://fontawesome.io/icons/-->
-					    </a>
-                    </li>
-                    <li>
-                        <a rel="tooltip" title="log-out" data-placement="bottom" href="./user/logout"  class="btn btn-white btn-simple btn-just-icon">
-						    <i class="fa fa-sign-out"></i>
-					    </a>
-                    </li>
-                    <li>
-                        <a rel="tooltip" title="Setting" data-placement="bottom" href="./sitting_login" class="btn btn-white btn-simple btn-just-icon">
-						    <i class="fa fa-cog"></i>
-					    </a>
-                    </li>
-                </ul>
-            </div>
-        </div>
-    </nav>
-    <!-- End Navbar -->
+        <header>
+     <%- include ../argument/bar/header.html %>   
+    </header>
     <div class="wrapper">
         <div class="header header-filter" style="background-image: url('assets/img/bg2.jpeg');">
             <div class="container">
@@ -119,7 +68,7 @@
             <div class="section section-basic">
                 <div class="container">
                     <div class="title">
-                        <h2>新增Tester</h2>
+                        <h2>新增活動學生</h2>
                     </div>
                     <!--Input 1 : -->
                     <div class="col-sm-6">
@@ -154,36 +103,8 @@
                 </div>
             </div>
         </div>
-        <footer class="footer">
-            <div class="container">
-                <nav class="pull-left">
-                    <ul>
-                        <li>
-                            <a href="#">
-							Home
-						</a>
-                        </li>
-                        <li>
-                            <a href="#">
-						   About Us
-						</a>
-                        </li>
-                        <li>
-                            <a href="#">
-						   Blog
-						</a>
-                        </li>
-                        <li>
-                            <a href="#">
-							Licenses
-						</a>
-                        </li>
-                    </ul>
-                </nav>
-                <div class="copyright pull-right">
-                    &copy; 2018, made with <i class="fa fa-terminal"></i> Nodejs by Theta for argument system in WuRET.
-                </div>
-            </div>
+        <footer>
+            <%- include ../argument/bar/footer.html %> 
         </footer>
     </div>
 </body>
