--- a/system/views/argument/sittingPage.html
+++ b/system/views/argument/sittingPage.html
@@ -6,7 +6,7 @@
     <link rel="apple-touch-icon" sizes="76x76" href="assets/img/apple-icon.png">
     <link rel="icon" type="image/png" href="assets/img/favicon.png">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
-    <title>Material Kit by Creative Tim</title>
+    <title>學生論證系統</title>
     <meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0' name='viewport' />
     <!--     Fonts and icons     -->
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
@@ -20,60 +20,9 @@
 </head>
 
 <body class="index-page">
-    <!-- Navbar -->
-    <nav class="navbar navbar-transparent navbar-fixed-top navbar-color-on-scroll">
-        <div class="container">
-            <div class="navbar-header">
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navigation-index">
-                    <span class="sr-only">Toggle navigation</span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-                <a href="./login">
-                    <div class="logo-container">
-                        <div class="logo">
-                            <img src="assets/img/logo.png" alt="site Logo" rel="tooltip" title="logo" data-placement="bottom" data-html="true">
-                        </div>
-                        <div class="brand">
-                            Argument Sys
-                        </div>
-                    </div>
-                </a>
-            </div>
-            <div class="collapse navbar-collapse" id="navigation-index">
-                <ul class="nav navbar-nav navbar-right">
-                    <li>
-                        <a href="./signup">
-                            <i class="material-icons">person_add</i> Sign up
-                        </a>
-                        <!--https://material.io/icons/-->
-                    </li>
-                    <li>
-                        <a href="./login">
-                            <i class="material-icons">chat</i> Enter activity
-                        </a>
-                    </li>
-                    <li>
-                        <a rel="tooltip" title="About ours" data-placement="bottom" href="http://ytwu.lst.ncu.edu.tw/wu/ch/" target="_blank" class="btn btn-white btn-simple btn-just-icon">
-                            <i class="fa fa-info-circle"></i><!--http://fontawesome.io/icons/-->
-                        </a>
-                    </li>
-                    <li>
-                        <a rel="tooltip" title="log-out" data-placement="bottom" href="./user/logout" class="btn btn-white btn-simple btn-just-icon">
-                            <i class="fa fa-sign-out"></i>
-                        </a>
-                    </li>
-                    <li>
-                        <a rel="tooltip" title="Setting" data-placement="bottom" href="./sitting_login" class="btn btn-white btn-simple btn-just-icon">
-                            <i class="fa fa-cog"></i>
-                        </a>
-                    </li>
-                </ul>
-            </div>
-        </div>
-    </nav>
-    <!-- End Navbar -->
+    <header>
+        <%- include ../argument/bar/header.html %>
+    </header>
     <div class="wrapper">
         <div class="header header-filter" style="background-image: url('assets/img/bg2.jpeg');">
             <div class="container">
@@ -172,7 +121,7 @@
                                         <li>
                                             <a href="#front-test" data-toggle="tab">
                                                     <i class="material-icons">library_add</i>
-                                                    新增front test
+                                                    為活動建立前測問題
                                                 </a>
                                         </li>
                                     </ul>
@@ -208,9 +157,9 @@
                                     </div>
                                 </div>
                                 <div class="tab-pane" id="front-test">
-                                    <p>....</p>
+                                    <p>為活動建立前測問題，通過前測問題將會更了解受測者之立場，請提出適合採用五點量表之論述句，受測者會點選同意程度來表達立場。</p>
                                     <div class="col-md-8 col-md-offset-2">
-                                        <button class="btn btn-danger" onclick="javascript:location.href='./newassessment'">newassessment</button>
+                                        <button class="btn btn-danger" onclick="javascript:location.href='./newassessment'">新增前測題目</button>
                                     </div>
                                 </div>
                             </div>
@@ -220,36 +169,8 @@
                 </div>
             </div>
         </div>
-        <footer class="footer">
-            <div class="container">
-                <nav class="pull-left">
-                    <ul>
-                        <li>
-                            <a href="#">
-                            Home
-                        </a>
-                        </li>
-                        <li>
-                            <a href="#">
-                           About Us
-                        </a>
-                        </li>
-                        <li>
-                            <a href="#">
-                           Blog
-                        </a>
-                        </li>
-                        <li>
-                            <a href="#">
-                            Licenses
-                        </a>
-                        </li>
-                    </ul>
-                </nav>
-                <div class="copyright pull-right">
-                    &copy; 2018, made with <i class="fa fa-terminal"></i> Nodejs by Theta for argument system in WuRET.
-                </div>
-            </div>
+        <footer>
+            <%- include ../argument/bar/footer.html %>
         </footer>
     </div>
 </body>
@@ -282,12 +203,17 @@ $.get("./activity",
     function(data, status) {
         activity_list = JSON.parse(data);
         console.log(activity_list);
-        for (var i in activity_list['return']) {
-            activity_time = activity_list['return'][i]['timeofactivity'];
-            activity_tag = activity_list['return'][i]['unicode'];
-            $('#youractivity').append("<div>" + "activity_time: " + activity_time + ' ---- activity_tag: ' + activity_tag + "</div>");
+        if (activity_list['return'].length) {
+            for (var i in activity_list['return']) {
+                activity_time = activity_list['return'][i]['timeofactivity'];
+                activity_tag = activity_list['return'][i]['unicode'];
+                $('#youractivity').append("<div>" + "activity_time: " + activity_time + ' ---- activity_tag: ' + activity_tag + "</div>");
 
+            }
+        } else {
+            $('#youractivity').append("<div>目前尚無舉辦活動</div>");
         }
+
 
 
     }
@@ -296,11 +222,15 @@ $.get("./activity/join",
     function(data, status) {
         activity_list = JSON.parse(data);
         console.log(activity_list);
-        for (var i in activity_list['return']) {
-            activity_time = activity_list['return'][i]['timeofactivity'];
-            activity_tag = activity_list['return'][i]['unicode'];
-            $('#youraddactivity').append("<div>" + "activity_time: " + activity_time + ' ---- activity_tag: ' + activity_tag + "</div>");
+        if (activity_list['return'].length) {
+            for (var i in activity_list['return']) {
+                activity_time = activity_list['return'][i]['timeofactivity'];
+                activity_tag = activity_list['return'][i]['unicode'];
+                $('#youraddactivity').append("<div>" + "activity_time: " + activity_time + ' ---- activity_tag: ' + activity_tag + "</div>");
 
+            }
+        } else {
+            $('#youraddactivity').append("<div>目前尚無參加他人舉辦之活動</div>");
         }
 
 
