--- a/system/views/argument/bar/footer.html
+++ b/system/views/argument/bar/footer.html
@@ -1,4 +1,3 @@
-
 <div class="container">
     <nav class="pull-left">
         <ul>
@@ -8,9 +7,8 @@
             </a>
             </li>
             <li>
-                <a href="#">
-               About Us
-            </a>
+                <a href="http://ytwu.lst.ncu.edu.tw/wu/ch/">
+               About us</a>
             </li>
             <li>
                 <a href="#">
