--- a/system/views/argument/bar/header.html
+++ b/system/views/argument/bar/header.html
@@ -32,16 +32,21 @@
                             <i class="material-icons">chat</i> 進入活動
                         </a>
                     </li>
+                    <!--http://fontawesome.io/icons/-->
+                    <!--
                     <li>
                         <a rel="tooltip" title="關於我們" data-placement="bottom" href="http://ytwu.lst.ncu.edu.tw/wu/ch/" target="_blank" class="btn btn-white btn-simple btn-just-icon">
-                            <i class="fa fa-info-circle"></i><!--http://fontawesome.io/icons/-->
+                            <i class="fa fa-info-circle"></i>
                         </a>
                     </li>
+                    -->
+                    <!--
                     <li>
                         <a rel="tooltip" title="登出" data-placement="bottom" href="./user/logout" class="btn btn-white btn-simple btn-just-icon">
                             <i class="fa fa-sign-out"></i>
                         </a>
                     </li>
+                    -->
                     <li>
                         <a rel="tooltip" title="個人主頁" data-placement="bottom" href="./sitting_login" class="btn btn-white btn-simple btn-just-icon">
                             <i class="fa fa-cog"></i>
