--- a/system/views/argument/login.html
+++ b/system/views/argument/login.html
@@ -50,8 +50,8 @@
 							        <i class="fa fa-envelope-o"></i>
 						        </span>
                                 <div class="form-group label-floating">
-                                    <label class="control-label">mail</label>
-                                    <input type="text" name='mail' class="form-control" />
+                                    <label class="control-label">信箱</label>
+                                    <input type="text" name='mail' value="user@mail.com" class="form-control" />
                                 </div>
                             </div>
                         </div>
@@ -63,8 +63,8 @@
 							        <i class="fa fa-tag"></i>
 						        </span>
                                 <div class="form-group label-floating">
-                                    <label class="control-label">Activity tag</label>
-                                    <input type="text" name='a_tag' class="form-control" />
+                                    <label class="control-label">活動代號</label>
+                                    <input type="text" name='a_tag' value="0-0000000000" class="form-control" />
                                 </div>
                             </div>
                         </div>
