--- a/system/views/argument/sittingPage.html
+++ b/system/views/argument/sittingPage.html
@@ -39,7 +39,7 @@
         <div class="main main-raised">
             <div class="section section-basic">
                 <div class="container">
-                    <h1><small>For Students</small></h1>
+                    <h1><small>活動參與</small></h1>
                     <!-- Tabs on Plain Card -->
                     <div class="card card-nav-tabs card-plain">
                         <div class="header header-primary">
@@ -80,7 +80,7 @@
             </div>
             <div class="section section-tabs">
                 <div class="container">
-                    <h1><small>For Teacher</small></h1>
+                    <h1><small>舉辦活動</small></h1>
                     <!-- Tabs with icons on Card -->
                     <div class="card card-nav-tabs">
                         <div class="header header-danger">
@@ -166,6 +166,11 @@
                         </div>
                     </div>
                     <!-- End Tabs with icons on Card -->
+                </div>
+            </div>
+            <div class="section section-basic">
+                <div class="container">
+                    <a rel="tooltip" title="登出" data-placement="bottom" href="./user/logout" class="btn btn-simple btn-just-icon"><i class="fa fa-sign-out">登出</i></a>
                 </div>
             </div>
         </div>
