--- a/system/views/argument/newTopic.html
+++ b/system/views/argument/newTopic.html
@@ -58,7 +58,7 @@
                         <!--/ Input 1 : User id-->
                         <!-- summit button-->
                         <div class="col-sm-12">
-                            <input type="submit" class="btn btn-primary" value="進入活動"></input>
+                            <input type="submit" class="btn btn-primary" value="done"></input>
                         </div>
                         <!--/ summit button-->
                     </form>
