--- a/system/views/argument/sitting_login.html
+++ b/system/views/argument/sitting_login.html
@@ -51,7 +51,7 @@
 								<i class="fa fa-envelope-o"></i>
 							</span>
                                 <div class="form-group label-floating">
-                                    <label class="control-label">mail</label>
+                                    <label class="control-label">信箱</label>
                                     <input type="text" name='mail' class="form-control" />
                                 </div>
                             </div>
@@ -64,7 +64,7 @@
 								<i class="fa fa-key"></i>
 							</span>
                                 <div class="form-group label-floating">
-                                    <label class="control-label">passwords</label>
+                                    <label class="control-label">密碼</label>
                                     <input type="password" name='pws' class="form-control" />
                                 </div>
                             </div>
