--- a/system/views/argument/SendTesterToChatroom.html
+++ b/system/views/argument/SendTesterToChatroom.html
@@ -63,7 +63,7 @@
             <div class="section section-basic">
                 <div class="container">
                     <div class="title">
-                        <h2>安排活動至活動聊天室</h2>
+                        <h2>安排學生至活動聊天室</h2>
                     </div>
                     <!--Input 1 : -->
                     <div id='main-sortable' class="col-sm-9">
