--- a/system/views/argument/newTopic.html
+++ b/system/views/argument/newTopic.html
@@ -51,7 +51,7 @@
 						        </span>
                                 <div class="form-group label-floating">
                                     <label class="control-label">content</label>
-                                    <input type="text" name='content' class="form-control" />
+                                    <input type="text" name='content' class="form-control" value="例如：臺灣目前核能中利益與安全該怎麼取捨?" />
                                 </div>
                             </div>
                         </div>
