--- a/system/views/argument/signup.html
+++ b/system/views/argument/signup.html
@@ -79,7 +79,7 @@
                                     <i class="fa fa-id-card"></i>
                                 </span>
                                 <div class="form-group label-floating">
-                                    <label class="control-label">學生姓名</label>
+                                    <label class="control-label">姓名</label>
                                     <input type="text" name='u_name' class="form-control" />
                                 </div>
                             </div>
