--- a/system/views/argument/newassessment.html
+++ b/system/views/argument/newassessment.html
@@ -50,7 +50,7 @@
                                 </span>
                             <div class="form-group label-floating">
                                 <label class="control-label">前測題目</label>
-                                <input type="text" id="content" name='content' value="一般情況下，你支持台灣的核能繼續擴大發展" class="form-control" />
+                                <input type="text" id="content" name='content' value="例如：一般情況下，你支持台灣的核能繼續擴大發展?" class="form-control" />
                             </div>
                         </div>
                     </div>
@@ -105,12 +105,18 @@ $.get("./activity",
         console.log(activity_list['text']);
         $('#Activity_ID').append('<optgroup id="y_Activitys" label="your Activity">');
 
+        if (activity_list["return"].length == 0) {
+            alert("您還未建立活動，請先建立活動。");
+            location.href = "./newactivity";
+        }
 
 
         for (var i = 0; i < activity_list["return"].length; i++) {
             var a_id = activity_list["return"][i]["avtivity_id"];
             var timeofactivity = activity_list["return"][i]["timeofactivity"].substring(0, 100);
-            htmltext = '<option value="' + a_id + '">activity:' + a_id + ',' + timeofactivity + '</option>'
+            var topic = activity_list["return"][i]["content"];
+
+            htmltext = '<option value="' + a_id + '">activity:' + a_id + ',' + timeofactivity +','+topic+'</option>'
             $('#y_Activitys').append(htmltext);
         }
     }
