--- a/system/views/argument/sittingPage.html
+++ b/system/views/argument/sittingPage.html
@@ -17,6 +17,9 @@
     <link href="assets/css/material-kit.css" rel="stylesheet" />
     <!-- CSS Just for demo purpose, don't include it in your project -->
     <link href="assets/css/demo.css" rel="stylesheet" />
+
+        <!-- 工作流程步驟 -->
+    <link href="assets/css/bs-is-fun.css" rel="stylesheet" />
 </head>
 
 <body class="index-page">
@@ -59,6 +62,7 @@
                         <div class="content">
                             <div class="tab-content text-center">
                                 <div class="tab-pane active" id="home">
+                                    <p style="text-align: left;width:100%;">已參加活動</p>
                                     <div class="tab-pane active" id="youraddactivity" style="float: left;">
                                     </div>
                                 </div>
@@ -80,48 +84,55 @@
             </div>
             <div class="section section-tabs">
                 <div class="container">
-                    <h1><small>舉辦活動</small></h1>
+                   <h1><small>舉辦活動</small></h1>
+                                    
+                                         
+                                            
+
+
                     <!-- Tabs with icons on Card -->
                     <div class="card card-nav-tabs">
-                        <div class="header header-danger">
+                        <div class="header header" style=" background-color: #99BBFF">
                             <!-- colors: "header-primary", "header-info", "header-success", "header-warning", "header-danger" -->
                             <div class="nav-tabs-navigation">
                                 <div class="nav-tabs-wrapper">
-                                    <ul class="nav nav-tabs" data-tabs="tabs">
+
+                                   <ul class="nav nav-tab nav-justified step step-round"  data-tabs="tabs">
+                                      
                                         <li class="active">
-                                            <a href="#youractivity" data-toggle="tab">
+                                            <a href="#youractivity"  data-toggle="tab" style="color: #000;">
                                                     <i class="material-icons">event_note</i>
                                                     已建立活動
                                                 </a>
                                         </li>
-                                        <li>
-                                            <a href="#topic" data-toggle="tab">
+                                       <li>
+                                            <a href="#topic" data-toggle="tab" style="color: #000;">
                                                     <i class="material-icons">library_add</i>
                                                     新增題目
                                                 </a>
                                         </li>
-                                        <li>
-                                            <a href="#new" data-toggle="tab">
+                                        <li >
+                                            <a href="#new" data-toggle="tab"  style="color: #000;">
                                                     <i class="material-icons">note_add</i>
                                                     建立活動
                                                 </a>
                                         </li>
-                                        <li>
-                                            <a href="#front-test" data-toggle="tab">
+                                        <li >
+                                            <a href="#front-test" data-toggle="tab"  style="color: #000;">
                                                     <i class="material-icons">library_add</i>
                                                     為活動建立前測問題
                                                 </a>
                                         </li>
-                                        <li>
-                                            <a href="#chatroom" data-toggle="tab">
+                                        <li >
+                                            <a href="#chatroom" data-toggle="tab"  style="color: #000;">
                                                     <i class="material-icons">chat</i>
                                                     設定活動學生
                                                 </a>
                                         </li>
-                                        <li>
-                                            <a href="#tester" data-toggle="tab">
+                                        <li >
+                                            <a href="#tester" data-toggle="tab"  style="color: #000;">
                                                     <i class="material-icons">face</i>
-                                                    安排活動學生進聊天室
+                                                    安排學生進聊天室
                                                 </a>
                                         </li>
                                         
@@ -189,6 +200,8 @@
 <!--  Plugin for the Datepicker, full documentation here: http://www.eyecon.ro/bootstrap-datepicker/ -->
 <script src="assets/js/bootstrap-datepicker.js" type="text/javascript"></script>
 <!-- Control Center for Material Kit: activating the ripples, parallax effects, scripts from the example pages etc -->
+<!-- 工作流程步驟 -->
+<script src="assets/js/brush.js"></script>
 <script src="assets/js/material-kit.js" type="text/javascript"></script>
 <script type="text/javascript">
 $().ready(function() {
@@ -213,7 +226,8 @@ $.get("./activity",
             for (var i in activity_list['return']) {
                 activity_time = activity_list['return'][i]['timeofactivity'];
                 activity_tag = activity_list['return'][i]['unicode'];
-                $('#youractivity').append("<div>" + "activity_time: " + activity_time + ' ---- activity_tag: ' + activity_tag + "</div>");
+                activity_topic = activity_list['return'][i]['content'];
+                $('#youractivity').append("<div style='text-align: left;width:100%;'>" + "activity_time: " + activity_time +','+activity_topic+' ---- activity_tag: ' + activity_tag + "</div>");
 
             }
         } else {
@@ -232,7 +246,9 @@ $.get("./activity/join",
             for (var i in activity_list['return']) {
                 activity_time = activity_list['return'][i]['timeofactivity'];
                 activity_tag = activity_list['return'][i]['unicode'];
-                $('#youraddactivity').append("<div>" + "activity_time: " + activity_time + ' ---- activity_tag: ' + activity_tag + "</div>");
+                activity_topic = activity_list['return'][i]['content'];
+
+                $('#youraddactivity').append("<div style='text-align: left;width:100%;'>" + "activity_time: " + activity_time +','+activity_topic+ ' ---- activity_tag: ' + activity_tag + "</div>");
 
             }
         } else {
